--- a/.env.example
+++ b/.env.example
@@ -1,16 +1,16 @@
-# API Keys - Replace with your actual keys
-# OpenAI
-OPENAI_API_KEY=your_openai_api_key_here
+# API Keys for AI Providers
+OPENAI_API_KEY=
+ANTHROPIC_API_KEY=
+PERPLEXITY_API_KEY=
+DEEPSEEK_API_KEY=
+GOOGLE_API_KEY=
 
-# Anthropic
-ANTHROPIC_API_KEY=your_anthropic_api_key_here
+# AI Model Names
+OPENAI_MODEL=
+ANTHROPIC_MODEL=
+PERPLEXITY_MODEL=
+DEEPSEEK_MODEL=
+GEMINI_MODEL=
 
-# DeepSeek
-DEEPSEEK_API_KEY=your_deepseek_api_key_here
-
-# Default project settings
-DEFAULT_PYTHON_VERSION=3.10
-DEFAULT_PROJECT_DIR=~/projects
-
-# Other configuration
-# Add any other environment variables your project needs here
+# GitHub MCP API Key
+GITHUB_PERSONAL_ACCESS_TOKEN=
