--- a/.vscode/tasks.json
+++ b/.vscode/tasks.json
@@ -4,7 +4,7 @@
         {
             "label": "Run Create Python Project",
             "type": "shell",
-            "command": "poetry run python ${workspaceFolder}/create_python_project/create_python_project.py",
+            "command": "poetry run python -m create_python_project.create_python_project",
             "problemMatcher": [],
             "group": {
                 "kind": "build",
@@ -26,13 +26,19 @@
         {
             "label": "Format Code with Black",
             "type": "shell",
-            "command": "poetry run black ${workspaceFolder}/create_python_project",
+            "command": "poetry run black ${workspaceFolder}/src/create_python_project",
             "problemMatcher": []
         },
         {
             "label": "Run Linting",
             "type": "shell",
-            "command": "poetry run pylint ${workspaceFolder}/create_python_project",
+            "command": "poetry run pylint ${workspaceFolder}/src/create_python_project",
+            "problemMatcher": []
+        },
+        {
+            "label": "Run Type Checking",
+            "type": "shell",
+            "command": "poetry run mypy --config-file=${workspaceFolder}/.config/mypy.ini ${workspaceFolder}/src/create_python_project",
             "problemMatcher": []
         },
         {
@@ -45,6 +51,33 @@
             "label": "Run Secret Detection",
             "type": "shell",
             "command": "poetry run detect-secrets scan --all-files",
+            "problemMatcher": []
+        },
+        {
+            "label": "Run Tests with Coverage",
+            "type": "shell",
+            "command": "poetry run pytest --cov=create_python_project tests/",
+            "problemMatcher": [],
+            "group": "test"
+        },
+        {
+            "label": "Generate Documentation",
+            "type": "shell",
+            "command": "poetry run pdoc --html --output-dir docs/ create_python_project/",
+            "problemMatcher": [],
+            "group": "build"
+        },
+        {
+            "label": "Build Package",
+            "type": "shell",
+            "command": "poetry build",
+            "problemMatcher": [],
+            "group": "build"
+        },
+        {
+            "label": "Run Pre-commit",
+            "type": "shell",
+            "command": "pre-commit run --all-files",
             "problemMatcher": []
         }
     ]
