[0;34m🤖 Generating AI commit message...[0m [0;36mUsing project's AI integration utilities...[0m ``` Set up new project structure and add documentation
Introduce initial project configuration including settings
for mypy, pylint, flake8, and isort to enforce code quality
and consistency. Add extensive project documentation to
`ai-docs` and update README.md to reflect new features and
usage guidelines. Implement scripts for automation tasks
and testing. Create initial source and test files for
`create_python_project` module. This setup aims to standardize
workflow and improve maintainability.
```

--- a/.config/mypy.ini
+++ b/.config/mypy.ini
@@ -14,3 +14,19 @@ follow_imports = skip
 
 [mypy-pytest.*]
 ignore_missing_imports = True
+
+# Add missing library imports
+[mypy-anthropic.*]
+ignore_missing_imports = True
+
+[mypy-google.*]
+ignore_missing_imports = True
+
+[mypy-google.generativeai.*]
+ignore_missing_imports = True
+
+[mypy-openai.*]
+ignore_missing_imports = True
+
+[mypy-requests.*]
+ignore_missing_imports = True
