--- a/.gitignore
+++ b/.gitignore
@@ -60,10 +60,13 @@ venv.bak/
 
 # VS Code
 .vscode/*
-!.vscode/settings.json
 !.vscode/tasks.json
 !.vscode/launch.json
 !.vscode/extensions.json
+.vscode/mcp-secrets.json
+
+# VS Code Settings with Secrets
+.vscode/settings.json
 
 # Logs
 *.log
