Update project structure and documentation - Simplify .gitignore by ignoring entire TaskMasterTasks directory - Update pre-commit to use poetry run for pylint - Refactor README.md to remove outdated content and add last updated timestamp - Update documentation files across the project - Improve update_documentation.sh script with better logic and error handling

--- a/.gitignore
+++ b/.gitignore
@@ -95,12 +95,8 @@ htmlcov/
 node_modules/
 package-lock.json
 
-# TaskMaster
-TaskMasterTasks/.cursor/
-TaskMasterTasks/.roo/
-TaskMasterTasks/.roomodes
-TaskMasterTasks/.windsurfrules
-TaskMasterTasks/.taskmasterconfig
+# TaskMaster - ignore the entire directory
+TaskMasterTasks/
 
 # Other cache and config directories
 .cursor/
