Update linting configuration and documentation Add ruff.toml for comprehensive linting configuration and update related files. Major changes include: - Configure ruff with extensive linting rules and exclusions - Update pre-commit-config.yaml to use ruff - Regenerate API documentation with latest changes - Fix linting issues across multiple files - Update project structure and README documentation

--- a/.config/mypy.ini
+++ b/.config/mypy.ini
@@ -30,3 +30,7 @@ ignore_missing_imports = True
 
 [mypy-requests.*]
 ignore_missing_imports = True
+
+# Ignore name-defined errors in core_project_builder.py as it contains generated code templates
+[mypy-create_python_project.utils.core_project_builder]
+disable_error_code = name-defined, attr-defined, misc, index, used-before-def, operator
