--- a/pyproject.toml
+++ b/pyproject.toml
@@ -62,3 +62,31 @@ ignore_missing_imports = true
 [[tool.mypy.overrides]]
 module = "openai.*"
 ignore_missing_imports = true
+
+# Ruff configuration (mirrors .config/ruff.toml)
+[tool.ruff]
+target-version = "py311"
+line-length = 100
+
+[tool.ruff.lint]
+select = [
+    "E",   # pycodestyle errors
+    "F",   # pyflakes
+    "I",   # isort
+    "N",   # pep8-naming
+    "W",   # pycodestyle warnings
+    "B",   # flake8-bugbear
+    "C4",  # flake8-comprehensions
+    "SIM", # flake8-simplify
+    "TCH", # type-checking
+    "TID", # tidyness
+    "UP",  # pyupgrade
+]
+ignore = [
+    "F821",  # Ignore undefined names in template strings
+    "E501",  # Line too long (handled by black)
+]
+
+[tool.ruff.lint.per-file-ignores]
+"src/create_python_project/utils/templates.py" = ["E501", "F821"]
+"tests/*" = ["E501"]
