--- a/.env.example
+++ b/.env.example
@@ -1,16 +1,27 @@
 # API Keys for AI Providers
-OPENAI_API_KEY=
-ANTHROPIC_API_KEY=
-PERPLEXITY_API_KEY=
-DEEPSEEK_API_KEY=
-GOOGLE_API_KEY=
+OPENAI_API_KEY=your_openai_api_key_here
+ANTHROPIC_API_KEY=your_anthropic_api_key_here
+PERPLEXITY_API_KEY=your_perplexity_api_key_here
+DEEPSEEK_API_KEY=your_deepseek_api_key_here
+GOOGLE_API_KEY=your_google_api_key_here
+BRIGHTDATA_API_KEY=your_brightdata_api_key_here
+PEXELS_API_KEY=your_pexels_api_key_here
 
 # AI Model Names
-OPENAI_MODEL=
-ANTHROPIC_MODEL=
-PERPLEXITY_MODEL=
-DEEPSEEK_MODEL=
-GEMINI_MODEL=
+OPENAI_MODEL=o4-mini-2025-04-16
+ANTHROPIC_MODEL=claude-3-7-sonnet-20250219
+PERPLEXITY_MODEL=sonar
+DEEPSEEK_MODEL=deepseek-chat
+GEMINI_MODEL=gemini-2.5-pro-preview-05-06
 
 # GitHub MCP API Key
-GITHUB_PERSONAL_ACCESS_TOKEN=
+GITHUB_PERSONAL_ACCESS_TOKEN=your_github_personal_access_token_here
+
+# Bright Data Variables
+WEB_UNLOCKER_ZONE=your_web_unlocker_zone_here
+BROWSER_AUTH=your_browser_auth_here
+
+# Smithery CLI Variables
+SMITHERY_CLI_KEY=your_smithery_cli_key_here
+SMITHERY_PROFILE=your_smithery_profile_here
+SMITHERY_API_KEY=your_smithery_api_key_here
