--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -8,10 +8,10 @@ repos:
         stages: [pre-commit]
 
   - repo: https://github.com/astral-sh/ruff-pre-commit
-    rev: v0.11.8
+    rev: v0.11.9
     hooks:
       - id: ruff
-        args: [--fix]
+        args: [--fix, --config=.config/ruff.toml]
         stages: [pre-commit]
 
   - repo: https://github.com/pre-commit/mirrors-mypy
