--- a/.config/mypy.ini
+++ b/.config/mypy.ini
@@ -8,6 +8,11 @@ check_untyped_defs = True
 disallow_untyped_decorators = False
 no_implicit_optional = True
 strict_optional = True
+follow_imports = normal
+cache_dir = .mypy_cache
+warn_redundant_casts = True
+warn_no_return = True
+warn_unreachable = True
 
 [mypy.plugins.numpy.*]
 follow_imports = skip
@@ -26,6 +31,15 @@ ignore_missing_imports = True
 ignore_missing_imports = True
 
 [mypy-openai.*]
+ignore_missing_imports = True
+
+[mypy-pandas.*]
+ignore_missing_imports = True
+
+[mypy-matplotlib.*]
+ignore_missing_imports = True
+
+[mypy-rich.*]
 ignore_missing_imports = True
 
 [mypy-requests.*]
