--- a/.vscode/tasks.json
+++ b/.vscode/tasks.json
@@ -24,7 +24,7 @@
         {
             "label": "Run Main App",
             "type": "shell",
-            "command": "poetry run python -m create_python_project.create_python_project",
+            "command": "python ${workspaceFolder}/scripts/clean_run.py",
             "problemMatcher": [],
             "group": {
                 "kind": "build",
@@ -40,7 +40,7 @@
         {
             "label": "Format Code",
             "type": "shell",
-            "command": "poetry run black ${workspaceFolder}/src/create_python_project",
+            "command": "poetry run black ${workspaceFolder}/src/create_python_project && poetry run ruff check --fix ${workspaceFolder}/src/create_python_project",
             "problemMatcher": []
         },
         {
@@ -52,7 +52,26 @@
         {
             "label": "Check Types",
             "type": "shell",
-            "command": "poetry run mypy --config-file=${workspaceFolder}/.config/mypy.ini ${workspaceFolder}/src/create_python_project",
+            "command": "cd ${workspaceFolder} && poetry run python -m mypy.dmypy run -- --config-file=.config/mypy.ini src/create_python_project",
+            "problemMatcher": []
+        },
+        {
+            "label": "Start Mypy Daemon",
+            "type": "shell",
+            "command": "cd ${workspaceFolder} && poetry run python -m mypy.dmypy start",
+            "problemMatcher": []
+        },
+        {
+            "label": "Run Mypy (Daemon Mode)",
+            "type": "shell",
+            "command": "cd ${workspaceFolder} && poetry run python -m mypy.dmypy run --config-file=.config/mypy.ini src/create_python_project",
+            "problemMatcher": [],
+            "group": "test"
+        },
+        {
+            "label": "Stop Mypy Daemon",
+            "type": "shell",
+            "command": "cd ${workspaceFolder} && poetry run python -m mypy.dmypy stop",
             "problemMatcher": []
         },
         {
