--- a/pyproject.toml
+++ b/pyproject.toml
@@ -63,8 +63,8 @@ ignore_missing_imports = true
 module = "openai.*"
 ignore_missing_imports = true
 
-# Ruff configuration (mirrors .config/ruff.toml)
 [tool.ruff]
+# Basic Ruff configuration (mirrors .config/ruff.toml)
 target-version = "py311"
 line-length = 100
 
@@ -78,8 +78,6 @@ select = [
     "B",   # flake8-bugbear
     "C4",  # flake8-comprehensions
     "SIM", # flake8-simplify
-    "TCH", # type-checking
-    "TID", # tidyness
     "UP",  # pyupgrade
 ]
 ignore = [
