Refactor project structure and update configuration files Restructure project directories and update configuration files to improve maintainability. Update flake8 rules to handle template strings better. Add new dmypy.json config for mypy daemon. Remove outdated docs and add new project setup documentation. Refactor core project builder and AI integration components.

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -32,6 +32,10 @@ pre-commit = "^4.2.0"
 mypy = "^1.15.0"
 ruff = "^0.11.9"
 flake8 = "^7.2.0"
+autopep8 = "^2.1.0"
+pyupgrade = "^3.15.0"
+autoflake = "^2.3.0"
+lxml = "^5.4.0"
 
 [build-system]
 requires = ["poetry-core>=2.0.0,<3.0.0"]
