--- a/.vscode/tasks.json
+++ b/.vscode/tasks.json
@@ -130,6 +130,16 @@
                 "kind": "test",
                 "isDefault": false
             }
+        },
+        {
+            "label": "Manage Logs",
+            "type": "shell",
+            "command": "${workspaceFolder}/scripts/manage_logs.sh",
+            "problemMatcher": [],
+            "group": {
+                "kind": "none",
+                "isDefault": false
+            }
         }
     ],
     "inputs": [
