--- a/.vscode/tasks.json
+++ b/.vscode/tasks.json
@@ -2,7 +2,7 @@
     "version": "2.0.0",
     "tasks": [
         {
-            "label": "AI Commit Workflow",
+            "label": "Commit Workflow",
             "type": "shell",
             "command": "${workspaceFolder}/scripts/ai_commit_workflow.sh",
             "problemMatcher": [],
@@ -24,11 +24,16 @@
         {
             "label": "Run Main App",
             "type": "shell",
-            "command": "python ${workspaceFolder}/scripts/clean_run.py",
+            "command": "poetry run python ${workspaceFolder}/scripts/clean_run.py",
             "problemMatcher": [],
             "group": {
                 "kind": "build",
                 "isDefault": false
+            },
+            "presentation": {
+                "reveal": "always",
+                "panel": "new",
+                "clear": true
             }
         },
         {
@@ -40,19 +45,13 @@
         {
             "label": "Format Code",
             "type": "shell",
-            "command": "poetry run black ${workspaceFolder}/src/create_python_project && poetry run ruff check --fix ${workspaceFolder}/src/create_python_project",
-            "problemMatcher": []
-        },
-        {
-            "label": "Run Pylint",
-            "type": "shell",
-            "command": "poetry run pylint ${workspaceFolder}/src/create_python_project",
+            "command": "poetry run black ${workspaceFolder}/src/create_python_project && poetry run isort ${workspaceFolder}/src/create_python_project && poetry run ruff check --fix ${workspaceFolder}/src/create_python_project",
             "problemMatcher": []
         },
         {
             "label": "Check Types",
             "type": "shell",
-            "command": "cd ${workspaceFolder} && poetry run python -m mypy.dmypy run -- --config-file=.config/mypy.ini src/create_python_project",
+            "command": "${workspaceFolder}/scripts/run_mypy.sh",
             "problemMatcher": []
         },
         {
