--- a/.config/mypy.ini
+++ b/.config/mypy.ini
@@ -48,3 +48,7 @@ ignore_missing_imports = True
 # Ignore name-defined errors in core_project_builder.py as it contains generated code templates
 [mypy-create_python_project.utils.core_project_builder]
 disable_error_code = name-defined, attr-defined, misc, index, used-before-def, operator
+
+# Ignore return value type inference issues in task_config.py
+[mypy-create_python_project.utils.task_config]
+disable_error_code = return-value
