--- a/.config/ruff.toml
+++ b/.config/ruff.toml
@@ -23,3 +23,4 @@ ignore = [
 [lint.per-file-ignores]
 "src/create_python_project/utils/templates.py" = ["E501", "F821"]
 "tests/*" = ["E501"]
+"ai-docs/**/*.py" = ["ALL"]
