--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -6,6 +6,7 @@ repos:
     hooks:
       - id: black
         stages: [pre-commit]
+        exclude: ^ai-docs/
 
   - repo: https://github.com/astral-sh/ruff-pre-commit
     rev: v0.11.9
@@ -13,6 +14,7 @@ repos:
       - id: ruff
         args: [--fix, --config=.config/ruff.toml]
         stages: [pre-commit]
+        exclude: ^ai-docs/
 
   - repo: https://github.com/pre-commit/mirrors-mypy
     rev: v1.9.0
@@ -20,5 +22,6 @@ repos:
       - id: mypy
         args: [--ignore-missing-imports, --config-file=.config/mypy.ini]
         stages: [pre-commit]
+        exclude: ^ai-docs/
 
   # Stage 2: Documentation generation - runs only after all other hooks pass
