Update aboutthisfolder.md files across multiple directories

--- a/.config/mypy.ini
+++ b/.config/mypy.ini
@@ -13,7 +13,8 @@ cache_dir = .mypy_cache
 warn_redundant_casts = True
 warn_no_return = True
 warn_unreachable = True
-exclude = ['^ai-docs/.*$']
+# Temporarily comment out exclude pattern due to regex issues
+# exclude = ["ai-docs/.*"]
 
 # Suppress template-related errors that are safe at runtime
 disable_error_code = no-any-return, name-defined
