--- a/.env.example
+++ b/.env.example
@@ -7,12 +7,12 @@ GOOGLE_API_KEY=your_google_api_key
 BRIGHTDATA_API_KEY=your_brightdata_api_key
 PEXELS_API_KEY=your_pexels_api_key
 
-# AI Model Names
-OPENAI_MODEL=o4-mini-2025-04-16
-ANTHROPIC_MODEL=claude-3-7-sonnet-20250219
+# AI Model Names (Updated May 2025)
+OPENAI_MODEL=gpt-4o-2025-05-13
+ANTHROPIC_MODEL=claude-sonnet-4-0
 PERPLEXITY_MODEL=sonar
-DEEPSEEK_MODEL=deepseek-chat
-GEMINI_MODEL=gemini-2.5-pro-preview-05-06
+DEEPSEEK_MODEL=deepseek-reasoner
+GEMINI_MODEL=gemini-3.5-pro-latest
 
 # GitHub MCP API Key
 GITHUB_PERSONAL_ACCESS_TOKEN=your_github_personal_access_token
