--- a/pyproject.toml
+++ b/pyproject.toml
@@ -15,6 +15,7 @@ requests = "^2.32.3"
 anthropic = "^0.51.0"
 rich = "^14.0.0"
 prompt-toolkit = "^3.0.51"
+google-generativeai = "^0.8.5"
 
 [tool.poetry.group.dev.dependencies]
 pytest = "^8.0.0"
