Update project files

--- a/package.json
+++ b/package.json
@@ -13,7 +13,6 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "@brightdata/mcp": "^1.8.2",
-    "task-master-ai": "^0.13.2"
+    "@brightdata/mcp": "^1.8.2"
   }
 }
