--- a/.config/mypy.ini
+++ b/.config/mypy.ini
@@ -13,8 +13,8 @@ cache_dir = .mypy_cache
 warn_redundant_casts = True
 warn_no_return = True
 warn_unreachable = True
-# Temporarily comment out exclude pattern due to regex issues
-# exclude = ["ai-docs/.*"]
+# Exclude documentation and historical files from type checking
+exclude = ai-docs/.*, scripts/testing/.*
 
 # Suppress template-related errors that are safe at runtime
 disable_error_code = no-any-return, name-defined
